# islandattrs

./: .gitignore  LICENSE  MANIFEST.in  README.md  cli.py  pyproject.toml  requirements.txt
islandattrs/: __init__.py  cli.py  core.py  data_loader.py
islandattrs/data/: archipelago_info.xlsx
islandattrs/data/built_in_results/: 1.xlsx  10.xlsx  11.xlsx  12.xlsx  13.xlsx  14.xlsx  15.xlsx  16.xlsx  17.xlsx  18.xlsx  19.xlsx  2.xlsx  20.xlsx  21.xlsx  22.xlsx  23.xlsx  24.xlsx  25.xlsx  26.xlsx  27.xlsx  28.xlsx  29.xlsx  3.xlsx  30.xlsx  31.xlsx  32.xlsx  33.xlsx  34.xlsx  35.xlsx  36.xlsx  37.xlsx  38.xlsx  39.xlsx  4.xlsx  40.xlsx  41.xlsx  42.xlsx  43.xlsx  44.xlsx  45.xlsx  (+31 more)
islandattrs/data/test_data/: Azores.dbf  Azores.sbn  Azores.sbx  Azores.shp  Azores.shp.xml  Azores.shx  Azorespoly.dbf  Azorespoly.sbn  Azorespoly.sbx  Azorespoly.shp  Azorespoly.shp.xml  Azorespoly.shx  C_shoreline.dbf  C_shoreline.sbn  C_shoreline.sbx  C_shoreline.shp.xml  C_shoreline.shx  target_islands.xlsx
islandattrs/tests/: test_built_in_datasets.py  test_internal_calc.py  test_local_data.py
