[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "islandattrs"
version = "0.1.2"
authors = [{ name="XY1019-GAO" }]
description = "岛屿生物地理学领域专业的岛屿地理属性计算工具包"
readme = "README.md"
requires-python = ">=3.8"
license = { text="MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "geopandas>=1.0.0",
    "pandas>=2.0.0,<2.3.0",
    "matplotlib>=3.7.0,<3.9.0",
    "numpy>=1.22.0,<2.0.0",
    "shapely>=2.0.0",
    "pyproj>=3.5.0",
    "rtree>=1.0.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.10.0",
    "tqdm>=4.65.0",
    "pyogrio>=0.7.0",
    "numexpr>=2.8.4",
    "bottleneck>=1.3.6"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"islandattrs.data" = ["*"]
"islandattrs.data.built_in_results" = ["*"]
"islandattrs.data.test_data" = ["*"]


